Version 0.2.6 (March 19, 2009)
==============================
* Significantly improved the error messages generated by the code. It now
  makes use of the exit() routine rather than throwing errors, and it returns
  various status codes (defined in config.hh) for different types of abnormal
  behavior.
* Changed two occurences of "cin" to "cout" in the draw_particles routines
* Corrected error in comment in the tetrahedron example
* Minor comment cleanups of the worklist_gen.pl script
* Updated Doxyfile to version 1.5.8

Version 0.2.5 (January 1, 2009)
===============================
* Added the DOE acknowledgements to the code overview document

Version 0.2.4 (December 14, 2008)
=================================
* Added the code overview PDF document to the package, in the docs directory
* Fixed some spelling errors in the comments
* Many more documentation updates

Version 0.2.3 (December 9, 2008)
================================
* Removed an unused variable that was reported by the Portland C compiler
* Documentation updates
* Added the import.pov script
* Added some simple functions to solve the problem from Stefan Eibl of counting
  faces
* Renamed the facets_loop to voropp_loop

Version 0.2.2 (November 19, 2008)
=================================
* Main README file updated

Version 0.2.1 (November 3, 2008)
================================
* Much more documentation
* Brief Doxygen class comments
* Updated Doxyfile to version 1.5.7

Version 0.2 (October 31, 2008)
==============================
* Updated some occurrences of char* with const char* for compatability with
  version 4.2 of the GNU C++ compiler
* Making use of default parameters in the wall classes
* The command line utility can now add walls

Version 0.1 (August 22, 2008)
=============================
* Initial version uploaded to the web